Create edit, delete methods and ative status table

--- a/index.html
+++ b/index.html
@@ -73,16 +73,21 @@
                             <th>Archived</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="js--status-table-body">
                         <tr>
-                            <td>Data 1-1</td>
-                            <td>Data 1-2</td>
-                            <td>Data 1-3</td>
+                            <td>Idea</td>
+                            <td class="js--count-active-idea"></td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>Data 2-1</td>
-                            <td>Data 2-2</td>
-                            <td>Data 2-3</td>
+                            <td>Task</td>
+                            <td class="js--count-active-task"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Random thought</td>
+                            <td class="js--count-active-thought"></td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
