Add archive table, archive, unzip and count archived items methods

--- a/index.html
+++ b/index.html
@@ -59,11 +59,39 @@
                                 rows="10"
                             ></textarea>
 
-                            <button type="submit">Додати</button>
+                            <button type="submit">Add/Edit</button>
                         </form>
                     </div>
                 </div>
             </form>
+            <table class="table-archive">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Created</th>
+                        <th>Category</th>
+                        <th>Content</th>
+                        <th>Dates</th>
+                        <th>
+                            <img
+                                class="js--archive-all"
+                                src="./icons/archive.png"
+                                alt="ArchiveAll"
+                            />
+                        </th>
+                    </tr>
+                </thead>
+                <tbody class="js--tbody-archive">
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
             <form action="#">
                 <table>
                     <thead>
@@ -77,17 +105,17 @@
                         <tr>
                             <td>Idea</td>
                             <td class="js--count-active-idea"></td>
-                            <td></td>
+                            <td class="js--count-archive-idea"></td>
                         </tr>
                         <tr>
                             <td>Task</td>
                             <td class="js--count-active-task"></td>
-                            <td></td>
+                            <td class="js--count-archive-task"></td>
                         </tr>
                         <tr>
                             <td>Random thought</td>
                             <td class="js--count-active-thought"></td>
-                            <td></td>
+                            <td class="js--count-archive-thought"></td>
                         </tr>
                     </tbody>
                 </table>
