--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
                 </table>
             </form>
         </div>
-        <script src="./main.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
